# homelab

./: .gitignore  README.md  config.env.example  deploy.sh  generate-passwords.sh
00-namespaces/: deploy.sh  namespaces.yaml
01-cilium/: deploy.sh  ip-pool.yaml  l2-announcement.yaml  values.yaml
01-metallb/: deploy.sh  ip-pool.yaml
02-traefik/: dashboard-ingressroute.yaml  deploy.sh  values.yaml
03-cert-manager/: cluster-issuer.yaml  deploy.sh  external-certificates.yaml  root-ca-configmap.yaml  trust-bundle.yaml  wildcard-certificate.yaml
04-storage/: deploy.sh  local-path-config.yaml  persistent-volumes.yaml  storage-classes-nfs-core.yaml  storage-classes-nfs-optional.yaml  storage-classes.yaml
05-redis/: deploy.sh  deployment.yaml  pvc.yaml  service.yaml
06-monitoring/: certificate.yaml  deploy.sh  ingressroutes.yaml  loki-values.yaml  prometheus-values.yaml  promtail-values.yaml
07-harbor/: certificate.yaml  deploy.sh  ingressroute.yaml  values.yaml
08-gitea/: certificate.yaml  deploy.sh  ingressroute.yaml  values.yaml
09-dagster/: certificate.yaml  deploy.sh  ingressroute.yaml  values.yaml
10-redpanda/: certificates.yaml  deploy.sh  ingressroute.yaml  values.yaml
11-n8n/: certificate.yaml  deploy.sh  deployment.yaml  ingressroute.yaml  pvc.yaml  service.yaml
12-ai/: deploy.sh
13-seaweedfs/: certificate.yaml  configmap.yaml  (+12 more)
webhook-relay/: .dockerignore  Cargo.toml  Dockerfile  README.md  build.sh
webhook-relay/config/: routes.example.yaml
webhook-relay/src/: config.rs  forwarder.rs  health.rs  main.rs  metrics.rs  router.rs  sqs.rs
(+65 files in other folders)
