[package]
name = "webhook-relay"
version = "0.1.0"
edition = "2021"
authors = ["Simon Elliston Ball"]
description = "SQS to internal service webhook relay"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# AWS SDK
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1"

# Web framework
axum = "0.7"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
prometheus = "0.13"
lazy_static = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Base64 decoding for webhook bodies
base64 = "0.22"

[profile.release]
lto = true
codegen-units = 1
strip = true
